templates/server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2024-08-08T09:44:59Z"
  labels:
    app: docker-server-i
    app.kubernetes.io/component: docker-server-i
    app.kubernetes.io/instance: docker-server-i
  name: server
  namespace: "{{ .Release.Namespace }}"
  resourceVersion: "548104048"
  uid: 852871fa-ffdd-4f60-8ad3-bfaab9059939
spec:
  host: server-{{ .Release.Namespace }}.{{ .Values.webhost }}
  path: /api
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: docker-server-i
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-08-08T09:44:59Z"
      status: "True"
      type: Admitted
    host: server-{{ .Release.Namespace }}.{{ .Values.webhost }}
    routerCanonicalHostname: router-default.{{ .Values.webhost }}
    routerName: default
    wildcardPolicy: None
